version/0.2/_sources/contributing.rst.txt
.. _contributing:

==========
Contribute
==========

Overall guidance on contributing to a PyAnsys repository appears in
`Contribute <https://dev.docs.pyansys.com/overview/contributing.html>`_
in the *PyAnsys Developer's Guide*. Ensure that you are thoroughly familiar
with this guide, paying particular attention to `Guidelines and Best Practices
<https://dev.docs.pyansys.com/guidelines/index.html>`_, before attempting
to contribute to PyDPF-Post.
 
The following contribution information is specific to PyDPF-Post.

Clone the repository
--------------------

To clone and install the latest version of PyDPF-Core in
development mode, run:

.. include:: pydpf-post_clone_install.rst


Post issues
-----------

Use the `PyDPF-Post Issues <https://github.com/pyansys/DPF-Post/issues>`_
page to submit questions, report bugs, and request new features.

To reach the PyAnsys support team, email `pyansys.support@ansys.com <pyansys.support@ansys.com>`_.

View documentation
------------------
Documentation for the latest stable release of PyDPF-Post is hosted at
`PyDPF Documentation <https://postdocs.pyansys.com/>_.

