version/0.6/_sources/contributing.rst.txt
.. _contributing:

==========
Contribute
==========

Overall guidance on contributing to a PyAnsys repository appears in
`Contribute <https://dev.docs.pyansys.com/overview/contributing.html>`_
in the *PyAnsys Developer's Guide*. Ensure that you are thoroughly familiar
with this guide, paying particular attention to `Guidelines and Best Practices
<https://dev.docs.pyansys.com/guidelines/index.html>`_, before attempting
to contribute to PyDPF-Post.
 
The following contribution information is specific to PyDPF-Post.

Clone the repository
--------------------

To clone and install the latest version of PyDPF-Core in
development mode, run:

.. include:: pydpf-post_clone_install.rst


Post issues
-----------

Use the `PyDPF-Post Issues <https://github.com/ansys/pydpf-post/issues>`_
page to submit questions, report bugs, and request new features.

To reach the project support team, email `pyansys.core@ansys.com <pyansys.core@ansys.com>`_.

View documentation
------------------
Documentation for the latest stable release of PyDPF-Post is hosted at
`PyDPF Documentation <https://post.docs.pyansys.com/>`_.

In the upper right corner of the documentation's title bar, there is an option
for switching from viewing the documentation for the latest stable release
to viewing the documentation for the development version or previously
released versions.
